infra/nexus/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus
  namespace: ci
spec:
  ports:
  - port: 8081
    name: web
    protocol: TCP
    targetPort: 8081
  - port: 10000
    name: registry
    protocol: TCP
    targetPort: 10000
  selector:
    app: nexus
